# rust-task

./: .env  AI_USSAGE_MD.md  Cargo.toml  README.md  docker-compose.yml  schema.sql
src/: auth.rs  jwt.rs  main.rs  models.rs
src/routes/: create_task.rs  create_users.rs  latest_verification_code.rs  login.rs  mod.rs  view_task.rs
